--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -10,9 +10,9 @@ interface Props {
 const { title, description, imageUrl, link, technologies } = Astro.props;
 ---
 
-<div class="bg-neutral-900 rounded-lg shadow-md overflow-hidden">
-  <img src={imageUrl} alt={title} class="w-full h-140 object-cover" />
-  <div class="p-4">
+<div class="w-full h-full flex flex-col bg-neutral-900 rounded-lg shadow-md overflow-hidden max-h-[60vh] sm:max-h-[500px]">
+  <img src={imageUrl} alt={title} class="w-full max-h-52 sm:max-h-80 object-cover" />
+  <div class="p-4 overflow-auto">
     <h3 class="text-4xl font-bold mb-4">{title}</h3>
     <p class="text-xl text-gray-300 mb-4">{description}</p>
     <div class="text-lg flex flex-wrap gap-2 mb-4">
